Add ALB to new Dovetail stack

--- a/stacks/provisioned.yml
+++ b/stacks/provisioned.yml
@@ -187,8 +187,6 @@ Resources:
       NotificationARNs:
         - !Ref CloudFormationNotificationArn
       Parameters:
-        AlbFullName: !Ref AlbFullName
-        AlbHttpsListenerArn: !Ref AlbHttpsListenerArn
         EcsClusterArn: !Ref EcsClusterArn
         VpcId: !Ref VpcId
         SecretsBase: !Ref SecretsBase
@@ -200,6 +198,11 @@ Resources:
         EnvironmentType: !Ref EnvironmentType
         EnvironmentTypeAbbreviation: !Ref EnvironmentTypeAbbreviation
         RootStackName: !Ref RootStackName
+        EchoServiceToken: !Ref EchoServiceToken
+        VpcPublicSubnet1Id: !Ref VpcPublicSubnet1Id
+        VpcPublicSubnet2Id: !Ref VpcPublicSubnet2Id
+        VpcPublicSubnet3Id: !Ref VpcPublicSubnet3Id
+        LoadBalancerInboundForwardingSecurityGroupId: !Ref LoadBalancerInboundForwardingSecurityGroupId
       Tags:
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
         - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
