--- a/stacks/provisioned/dovetail-router.yml
+++ b/stacks/provisioned/dovetail-router.yml
@@ -296,7 +296,7 @@ Resources:
         - Name: LoadBalancer
           Value: !GetAtt Alb.LoadBalancerFullName
         - Name: TargetGroup
-          Value: !GetAtt WebTargetGroup.TargetGroupFullName
+          Value: !GetAtt TargetGroup.TargetGroupFullName
       EvaluationPeriods: 1
       MetricName: HTTPCode_Target_5XX_Count
       Namespace: AWS/ApplicationELB
@@ -318,7 +318,7 @@ Resources:
       LoadBalancers:
         - ContainerName: !Ref kContainerName
           ContainerPort: !Ref kApplicationPort
-          TargetGroupArn: !Ref WebTargetGroup
+          TargetGroupArn: !Ref TargetGroup
       PropagateTags: TASK_DEFINITION
       Tags:
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
