Update name tags

--- a/stacks/provisioned/feeder.yml
+++ b/stacks/provisioned/feeder.yml
@@ -97,8 +97,7 @@ Resources:
         - !GetAtt Constants.VanityAlbDomain
         - !If [IsProduction, feeder.prx.tech, !Ref "AWS::NoValue"]
       Tags:
-        - Key: Name
-          Value: !Sub Feeder ${EnvironmentTypeAbbreviation} ALB ${Alb.LoadBalancerName}
+        - { Key: Name, Value: !Sub "${RootStackName}_feeder_${Alb.LoadBalancerName}" }
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
         - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
         - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
