--- a/stacks/provisioned/dovetail-router.yml
+++ b/stacks/provisioned/dovetail-router.yml
@@ -115,8 +115,7 @@ Resources:
         - !GetAtt Constants.VanityAlbDomain
         - !GetAtt Constants.ServiceDomain # TODO Should not exist
       Tags:
-        - Key: Name
-          Value: !Sub Dovetail Router ${EnvironmentTypeAbbreviation} ALB ${Alb.LoadBalancerName}
+        - { Key: Name, Value: !Sub "${RootStackName}_dovetail_${Alb.LoadBalancerName}" }
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
         - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
         - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
