Pass legacy Dovetail parameters to new stack

--- a/stacks/provisioned.yml
+++ b/stacks/provisioned.yml
@@ -61,6 +61,8 @@ Parameters:
   NetworksSharedAlbListenerRulePriorityPrefix: { Type: String }
   DovetailRouterEcrImageTag: { Type: String }
   DovetailRouterSecretsVersion: { Type: String }
+  DovetailLegacyEcrImageTag: { Type: String }
+  DovetailLegacySecretsVersion: { Type: String }
   IdEcrImageTag: { Type: String }
   IdSecretsVersion: { Type: String }
   IdSharedAlbListenerRulePriorityPrefix: { Type: String }
@@ -203,6 +205,11 @@ Resources:
         VpcPublicSubnet2Id: !Ref VpcPublicSubnet2Id
         VpcPublicSubnet3Id: !Ref VpcPublicSubnet3Id
         LoadBalancerInboundForwardingSecurityGroupId: !Ref LoadBalancerInboundForwardingSecurityGroupId
+        # For legacy stack
+        DovetailLegacyEcrImageTag: !Ref DovetailLegacyEcrImageTag
+        DovetailLegacySecretsVersion: !Ref DovetailLegacySecretsVersion
+        TemplateUrlPrefix: !Ref TemplateUrlPrefix
+        CloudFormationNotificationArn: !Ref CloudFormationNotificationArn
       Tags:
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
         - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
