--- a/stacks/provisioned/dovetail-router.yml
+++ b/stacks/provisioned/dovetail-router.yml
@@ -90,6 +90,11 @@ Parameters:
   VpcPublicSubnet1Id: { Type: "AWS::EC2::Subnet::Id" }
   VpcPublicSubnet2Id: { Type: "AWS::EC2::Subnet::Id" }
   VpcPublicSubnet3Id: { Type: "AWS::EC2::Subnet::Id" }
+  # For legacy stack
+  CloudFormationNotificationArn: { Type: String }
+  TemplateUrlPrefix: { Type: String }
+  DovetailLegacyEcrImageTag: { Type: String }
+  DovetailLegacySecretsVersion: { Type: String }
 
 Conditions:
   IsProduction: !Equals [!Ref EnvironmentType, Production]
