--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -958,6 +958,8 @@ Resources:
 
         DovetailRouterEcrImageTag: !Ref DovetailRouterEcrImageTag
         DovetailRouterSecretsVersion: !Ref DovetailrouterSecretsVersion
+        DovetailLegacyEcrImageTag: !Ref DovetailEcrImageTag
+        DovetailLegacySecretsVersion: !Ref DovetailSecretsVersion
 
         IdEcrImageTag: !Ref IdEcrImageTag
         IdSecretsVersion: !Ref IdSecretsVersion
