Add new Dovetail 2 stack

--- a/stacks/provisioned/dovetail-router.yml
+++ b/stacks/provisioned/dovetail-router.yml
@@ -483,3 +483,32 @@ Resources:
         - { Key: prx:dev:family, Value: Dovetail }
         - { Key: prx:dev:application, Value: Router } # TODO
       TaskRoleArn: !GetAtt TaskRole.Arn
+
+  LegacyStack:
+    Type: AWS::CloudFormation::Stack
+    Properties:
+      NotificationARNs:
+        - !Ref CloudFormationNotificationArn
+      Parameters:
+        EcsClusterArn: !Ref EcsClusterArn
+        VpcId: !Ref VpcId
+        SecretsBase: !Ref SecretsBase
+        EcrImageTag: !Ref DovetailLegacyEcrImageTag
+        SecretsVersion: !Ref DovetailLegacySecretsVersion
+        EcrRegion: !Ref EcrRegion
+        SecretsStackName: !Ref SecretsStackName
+        NotificationsStackName: !Ref NotificationsStackName
+        EnvironmentType: !Ref EnvironmentType
+        EnvironmentTypeAbbreviation: !Ref EnvironmentTypeAbbreviation
+        RootStackName: !Ref RootStackName
+        AlbLoadBalancerFullName: !GetAtt Alb.LoadBalancerFullName
+        AlbHttpsListenerArn: !Ref HttpsListener
+      Tags:
+        - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
+        - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
+        - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+        - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
+        - { Key: prx:dev:family, Value: Dovetail }
+        - { Key: prx:dev:application, Value: Router } # TODO
+      TemplateURL: !Sub ${TemplateUrlPrefix}/dovetail-legacy.yml
+      TimeoutInMinutes: 20
