Add ElastiCache tags

--- a/stacks/provisioned/castle.yml
+++ b/stacks/provisioned/castle.yml
@@ -219,6 +219,13 @@ Resources:
         - !Ref VpcPrivateSubnet1Id
         - !Ref VpcPrivateSubnet2Id
         - !Ref VpcPrivateSubnet3Id
+      Tags:
+        - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
+        - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
+        - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+        - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
+        - { Key: prx:dev:family, Value: Dovetail }
+        - { Key: prx:dev:application, Value: Castle }
   RedisSecurityGroup:
     Type: AWS::EC2::SecurityGroup
     Properties:
@@ -229,6 +236,13 @@ Resources:
           FromPort: 6379
           SourceSecurityGroupId: !Ref EcsAsgOutboundTrafficSecurityGroupId
           ToPort: 6379
+      Tags:
+        - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
+        - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
+        - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+        - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
+        - { Key: prx:dev:family, Value: Dovetail }
+        - { Key: prx:dev:application, Value: Castle }
   RedisReplicationGroup:
     Type: AWS::ElastiCache::ReplicationGroup
     Properties:
