--- a/stacks/shared-memcached.yml
+++ b/stacks/shared-memcached.yml
@@ -36,6 +36,12 @@ Resources:
         - !Ref VPCSubnet1
         - !Ref VPCSubnet2
         - !Ref VPCSubnet3
+      Tags:
+        - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
+        - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
+        - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+        - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
+        - { Key: prx:dev:application, Value: Common }
   SharedMemcachedSecurityGroup:
     Type: AWS::EC2::SecurityGroup
     Properties:
@@ -46,16 +52,12 @@ Resources:
           SourceSecurityGroupId: !Ref SourceSecurityGroupId1
           ToPort: 11211
       Tags:
-        - Key: Project
-          Value: platform.prx.org
-        - Key: Environment
-          Value: !Ref EnvironmentType
-        # TODO - Key: Name
-        #   Value: tktkt
-        - Key: prx:cloudformation:stack-name
-          Value: !Ref AWS::StackName
-        - Key: prx:cloudformation:stack-id
-          Value: !Ref AWS::StackId
+        # TODO - { Key: name, Value: "2021-04-07" }
+        - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
+        - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
+        - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+        - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
+        - { Key: prx:dev:application, Value: Common }
       VpcId: !Ref VPC
 
   SharedMemcachedCluster:
